org.omg.kerml.xpect.tests/src/org/omg/kerml/xpect/tests/failing/ShadowingTests_ImportAndInnerClassesNamesAreTheSameBadCase2_Rdef.kerml.xt
//* 
XPECT_SETUP org.omg.kerml.xpect.tests.testsuite.KerMLXtextTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.kerml"}
		File {from ="/src/DependencyOuterPackage_Feature_Rdef.kerml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.kerml"}
				File {from ="/src/DependencyOuterPackage_Feature_Rdef.kerml"}
			}
		}
	}
END_SETUP 
*/

package test{
	import OuterPackage::*;
	feature A{
		feature a2{}
	}
	feature B redefines A {
		//* XPECT errors --- 
		   "Couldn't resolve reference to Feature 'a1'." at "a1"
		"The feature 'type' of 'org.omg.sysml.lang.sysml.impl.FeatureImpl@2dd2e270{file:/C:/install_dir/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/a_ShadowingTests_ImportAndInnerClassesNamesAreTheSameBadCase2_Rdef.kerml.xt#//@ownedRelationship.2/@ownedRelatedElement.0/@ownedRelationship.1/@ownedRelatedElement.0}' with 0 values must have at least 1 values" at "b redefines a1{}"
		--- */
		feature b redefines a1{}
	}
}
